structmeta-tests/tests/compile_fail/to_tokens/not_impl_to_tokens.stderr
error[E0277]: the trait bound `X: ToTokens` is not satisfied
 --> tests/compile_fail/to_tokens/not_impl_to_tokens.rs:4:5
  |
4 |     x: X,
  |     ^ the trait `ToTokens` is not implemented for `X`
  |
  = help: the following other types implement trait `ToTokens`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
